finish mvp for slides

--- a/decks/going-reactless-with-web-components/index.html
+++ b/decks/going-reactless-with-web-components/index.html
@@ -458,13 +458,80 @@
 
                 <section>
                     <section><h3>Let's talk use cases!</h3></section>
-                    <section>component libraries</section>
-                    <section>web assembly and shipping performant code</section>
-                    <section>web assembly showcase</section>
+                    <section>
+                        component libraries
+                        <ul>
+                            <li>
+                                It's the perfect fit for establishing consistent
+                                UIs across all web apps
+                            </li>
+                            <li>
+                                Companies like Apple, Google, Salesforce,
+                                SpaceX, ... are making component libraries with
+                                Web Components!
+                                <ul>
+                                    <li>
+                                        <a
+                                            href="https://github.com/material-components/material-components-web-components/"
+                                            >Material implemented with Web
+                                            Components</a
+                                        >
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="https://open-wc.org/"></a> and
+                                <a href="https://stenciljs.com/"></a> are good
+                                resources to get you started
+                            </li>
+                            <li>
+                                Feel free to check out
+                                <a
+                                    href="https://github.com/1ntEgr8/webcomponents-monorepo-template"
+                                    >this template</a
+                                >
+                                that makes writing component monorepos simpler
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        the UNIX philosophy
+                        <ul>
+                            <li>Do one thing, but do it really well!</li>
+                            <li>
+                                You can write some very performant code (using
+                                Web Assembly), pack it into a web component, and
+                                ship it!
+                            </li>
+                            <li>
+                                Your teams can use this highly performant
+                                component across frameworks and web apps
+                            </li>
+                        </ul>
+                    </section>
                 </section>
 
                 <section>
                     Summary
+                    <ul>
+                        <li>
+                            Web Components natively allows you to encapsulate
+                            HTML, CSS and JS to created reusable components for
+                            the web
+                        </li>
+                        <li>
+                            Since it is a spec, it is supported wherever HTML is
+                            supported
+                        </li>
+                        <li>
+                            It does have some kinks, but frameworks like
+                            <a href="https://hybrids.js.org/">hybrids</a> make
+                            it a lot more ergonomic to write web components
+                        </li>
+                        <li>
+                            You can build component libraries, and highly performant components to share across teams
+                        </li>
+                    </ul>
                 </section>
             </div>
         </div>
